<resources>
    <string name="app_name">Mapp Game</string>
    <string name="register_password_hint_text">Password</string>
    <string name="register_email_hint_text">E-mail</string>
    <string name="register_name_hint_text">Name</string>
    <string name="register_phone_hint_text">Phone number</string>
    <string name="register_title">Sign Up</string>
    <string name="register_redirect_to_login_link">Already have an Account?\nClick to Login</string>
    <string name="register_button_label">Sign Up</string>
    <string name="login_button_label">Login</string>
    <string name="login_redirect_link_to_register">Don\'t have an Account?\nClick to Register</string>
    <string name="login_password_hint_text">Password</string>
    <string name="login_email_hint_text">E-mail</string>
    <string name="login_title">Login</string>
    <string name="main_logo">Mapp_game_logo</string>
    <string name="mapp_game_logo_description">Mapp Game logo</string>
    <string name="profiles_title">Profiles</string>
    <string name="register">Register</string>
    <string name="cpf">CPF</string>
    <string name="logout">Logout</string>
    <string name="logout_button_description">logout button</string>
    <string name="profiles_button_description">profiles button</string>
    <string name="home_button_description">home button description</string>
    <string name="button_settings_description">button settings description</string>
    <string name="button_profile_description">button profile description</string>
    <string name="button_new_profile_text">Add new profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_professional">Welcome professional</string>
    <string name="profile_play_button">Play</string>
    <string name="update_user_title">Update User</string>
    <string name="update">Update</string>
    <string name="redirect_on_update_user_text">If you update your account password, you will be redirected to login</string>
    <string name="redirect_on_update_professional_text">If you update your account password or CRM, you will be redirected to login</string>
    <string name="password_confirmation_hint">Password confirmation</string>
    <string name="create_profile_title">Create profile</string>
    <string name="birth_date_hint">Birth Date</string>
    <string name="create_button_text">Create</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="update_profile_title">Update profile</string>
    <string name="return_button">return button</string>
    <string name="delete_button">delete button</string>
    <string name="enter_with_crm_license_button">Enter with CRM license</string>
    <string name="user_license_title">Enter with CRM license</string>
    <string name="user_license_description_text">Your license can\'t have white spaces. His license will be consulted in the dependency of the national council of medicine</string>
    <string name="license_text_hint">License Ex: CRM/RJ123456</string>
    <string name="send_license_button_text">Send License</string>
    <string name="after_send_your_license_you_re_automatically_redirect_to_make_login">After send your license, you\'re automatically redirect to make login</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="user_email">Parent email</string>
    <string name="search">Search</string>
    <string name="search_patients_by_parent_email">Search patients by parent email</string>
    <string name="ex_crm_rj123456">Ex: CRM/RJ123456</string>
    <string name="state">State</string>
    <string name="update_professional">Update Professional</string>
    <string name="forgot_your_password_click_here">Forgot your password? Click here!</string>
    <string name="e_mail_confirmation">E-mail confirmation</string>
    <string name="an_email_will_be_sent_to_you_check_and_get_your_temporary_password">An email will be sent to you, check and get your temporary password</string>
    <string name="send">Send E-mail</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="button_delete_profile">button_delete_profile</string>
    <string name="you_can_scrolling_the_graph_if_have_many_data">You can scrolling the graph if have many data!</string>
    <string name="with_errors">WITH ERRORS</string>
    <string name="all">ALL</string>
    <string name="last_five">LAST FIVE</string>
    <string name="with_hits">WITH HITS</string>
    <string name="pdf">PDF</string>
    <string name="button_pdf_description">button_pdf_description</string>
    <string name="count_per_view">Count per view</string>
    <string name="empty" />
    <string name="go">GO</string>
    <string name="count_per_view_area">Count per view area</string>
    <string name="new_password">New Password</string>
    <string name="return_to_login_click_here">Return to login? Click here</string>
</resources>