<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profiles_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:padding="16dp"
    tools:context=".activities.UpdateUserActivity">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryButton"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/userUpdateButtonReturn"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/logout_button_description"
            android:src="@drawable/return_icon" />

        <ImageButton
            android:id="@+id/userUpdateButtonProfiles"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/profiles_button_description"
            android:src="@drawable/profiles_icon" />

        <ImageButton
            android:id="@+id/userUpdateButtonHome"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/home_button_description"
            android:src="@drawable/main_logo_icon" />

        <ImageButton
            android:id="@+id/userUpdateButtonProfile"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/button_profile_description"
            android:src="@drawable/profile_icon" />

        <ImageButton
            android:id="@+id/userUpdateButtonLogout"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/button_settings_description"
            android:src="@drawable/logout_icon" />
    </LinearLayout>


    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navBar"
        android:layout_marginTop="31dp"
        android:text="@string/update_user_title"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorFormBackground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorFormBackground"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:drawablePadding="5dp"
            android:hint="@string/register_name_hint_text"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawablePadding="5dp"
            android:hint="@string/register_email_hint_text"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:drawablePadding="5dp"
            android:hint="@string/register_phone_hint_text"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:drawablePadding="5dp"
            android:hint="@string/password_confirmation_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:drawablePadding="5dp"
            android:hint="@string/register_password_hint_text"
            android:inputType="textPassword" />
    </LinearLayout>
    <TextView
        android:id="@+id/textViewUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginTop="11dp"
        android:lineSpacingExtra="7dp"
        android:text="@string/redirect_on_update_user_text"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFormBackground" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUpdate"
        android:layout_marginTop="41dp"
        android:background="@color/colorPrimaryButton"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/colorFormBackground" />

</RelativeLayout>