<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profiles_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:padding="16dp"
    tools:context=".activities.UpdateProfileActivity">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimaryButton"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/profileUpdateButtonReturn"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/return_button"
            android:src="@drawable/return_icon" />

        <ImageButton
            android:id="@+id/profileUpdateButtonProfiles"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/profiles_button_description"
            android:src="@drawable/profiles_icon" />

        <ImageButton
            android:id="@+id/profileUpdateButtonHome"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/home_button_description"
            android:src="@drawable/main_logo_icon" />

        <ImageButton
            android:id="@+id/profileUpdateButtonProfile"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/button_profile_description"
            android:src="@drawable/profile_icon" />

        <ImageButton
            android:id="@+id/profileUpdateButtonDelete"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/trash_icon" />
    </LinearLayout>


    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navBar"
        android:layout_marginTop="31dp"
        android:text="@string/update_profile_title"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorFormBackground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorFormBackground"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:drawablePadding="5dp"
            android:hint="@string/register_name_hint_text"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawablePadding="5dp"
            android:hint="@string/birth_date_hint"
            android:inputType="date" />
    </LinearLayout>

    <Button
        android:id="@+id/updateButtonProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="41dp"
        android:background="@color/colorPrimaryButton"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/colorFormBackground" />

</RelativeLayout>