<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:padding="16dp"
    tools:context=".activities.DataViewActivity">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryButton"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/profileButtonReturn"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/logout_button_description"
            android:src="@drawable/return_icon" />

        <ImageButton
            android:id="@+id/profileButtonAudio"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/profiles_button_description"
            android:src="@drawable/audio_icon" />

        <ImageButton
            android:id="@+id/profileButtonHome"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/home_button_description"
            android:src="@drawable/main_logo_icon" />

        <ImageButton
            android:id="@+id/profileButtonProfile"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/button_profile_description"
            android:src="@drawable/profile_icon" />

        <ImageButton
            android:id="@+id/profileButtonSettings"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryButton"
            android:contentDescription="@string/button_settings_description"
            android:src="@drawable/settings_icon" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navBar"
        android:layout_marginTop="142dp"
        android:layout_marginBottom="142dp"
        android:contentDescription="@string/mapp_game_logo_description"
        app:srcCompat="@drawable/main_logo"
        tools:ignore="ImageContrastCheck" />


</RelativeLayout>