<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:padding="16dp"
    tools:context=".activities.ForgotPasswordActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/mapp_game_logo_description"
        app:srcCompat="@drawable/main_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="32dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorFormBackground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorFormBackground"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawablePadding="5dp"
            android:hint="@string/login_email_hint_text"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextConfirmEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:drawablePadding="5dp"
            android:hint="@string/e_mail_confirmation"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="11dp"
        android:lineSpacingExtra="7dp"
        android:text="@string/an_email_will_be_sent_to_you_check_and_get_your_temporary_password"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFormBackground" />

    <Button
        android:id="@+id/buttonSendRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRegister"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimaryButton"
        android:ellipsize="none"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorFormBackground" />

    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSendRequest"
        android:layout_marginTop="11dp"
        android:lineSpacingExtra="7dp"
        android:text="@string/return_to_login_click_here"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFormBackground" />
</RelativeLayout>